# pydmc

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dmc/: dmc.py  dmc_sim.py  requirements.txt  setup.py
dmc/dmc/: dmc_sim.py
dmc/tests/: test_dmc_sim.py
pydmc/: __init__.py  dmc.py  dmcfit.py  dmcob.py  dmcplot.py  dmcsim.py
src/pydmc/: __init__.py  dmc.py
tests/: test_dmc.py  test_dmcsim.py
