[project]
name = "pydmc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "igmmgi", email = "ian.mackenzie@uni-tuebingen.de" }]
requires-python = ">=3.10"
dependencies = [
  "fastkde>=2.1.3",
  "matplotlib>=3.10.1",
  "numba>=0.61.2",
  "numpy>=2.2.4",
  "pandas>=2.2.3",
  "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
